# vut-ims-project

./: CMakeLists.txt  FlyingBall.cpp  FlyingBall.h  Makefile  Nystrom.cpp  Nystrom.h  NystromN.cpp  NystromN.h  Point.cpp  Point.h  PointN.cpp  PointN.h  TargetAimer.cpp  TargetAimer.h  Test.cpp  Test.h  Wind.cpp  Wind.h  drawer.py  main.cpp  out.txt
